<resources>
    <string name="about">Acerca de...</string>
    <string name="app_name">CMMI Helper</string>
    <string name="action_settings">Settings</string>
    <string name="nueva_organizacion">Nueva organización</string>
    <string name="eliminar_organizacion">Eliminar organización</string>
    <string name="ayuda_cmmi">Ayuda CMMI</string>
    <string name="modificar_consultar">Modificar/Consultar</string>
    <string name="opciones_organizaciones">Opciones orgs.</string>
    <string name="opciones_evaluacion">Opciones eval.</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_nueva_organizacion">Nueva organización</string>
    <string name="hello_world">Hello world!</string>
    <string name="nueva_evaluacion">Nueva evaluación</string>
    <string name="continuar_evaluacion">Continuar evaluación</string>
    <string name="eliminar_evaluacion">Eliminar evaluación</string>
    <string name="title_activity_ayuda__cmmi">Ayuda de CMMI</string>
    <string name="nombre_organizacion">Nombre:</string>
    <string name="persona_contacto">Persona de contacto</string>
    <string name="nombre_contacto">Nombre:</string>
    <string name="cargo_contacto">Cargo:</string>
    <string name="correo_contacto">Correo:</string>
    <string name="telefono_contacto">Teléfono:</string>
    <string name="notas">Notas:</string>
    <string name="title_activity_nueva_evaluacion">Nueva evaluación</string>
    <string name="datos_evaluacion">Datos de la evaluación</string>
    <string name="datos_organizacion">Datos de la organización</string>
    <string name="anadir_icono">Añadir icono</string>
    <string name="consultar_evaluaciones">Consultar evaluaciones</string>
    <string name="title_activity_consultar_organizacion">Datos de organización</string>
    <string name="nombre_evaluacion">Nombre:</string>
    <string name="numero_evaluacion">Número:</string>
    <string name="fecha_inicio">Fecha de inicio:</string>
    <string name="gestion_configuracion">CM - Gestión de la configuración</string>
    <string name="monitorizacion_control">PMC - Monitorización y control del proyecto</string>
    <string name="planificacion_proyecto">PP - Planificación del proyecto</string>
    <string name="aseguramiento_calidad">PPQA - Aseguramiento de la calidad del proceso y del producto</string>
    <string name="comenzar">Comenzar</string>
    <string name="gestion_requisitos">REQM - Gestión de requisitos</string>
    <string name="medicion_analisis">MA - Medición y análisis</string>
    <string name="gestion_acuerdos">SAM - Gestión de acuerdos con proveedores</string>
    <string name="madurez_2">ML2 - Nivel de madurez 2</string>
    <string name="title_activity_gestion_configuracion">CM - Gestión de la configuración</string>
    <string name="acerca_text">
<![CDATA[<center><h1><b>CMMI Helper</b></h1><br><br>
        <b>Trabajo Fin de grado<br><br>
        Especialidad en Ingeniería del Software<br><br></b>
        Soportando la evaluación del nivel de madurez y capacidad de una organización considerando CMMI v1.3<br><br>
Presentado por: Moisés Cano Torralba<br><br>
Dirigido por: Francisco Montero Simarro</center>
        
        ]]>
    </string>
    <string name="gestion_configuracion_SP11">
<![CDATA[
         <h1><b>CM - Gestión de la configuración</b></h1><br>
        <b>Propósito</b><br><br>El propósito de la Gestión de Configuración (CM) es establecer y mantener
		la integridad de los productos de trabajo utilizando la identificación
de la configuración, el control de la configuración, el informe del
estado de la configuración y las auditorías de la configuración.

<br><br><br><b><h3>SG1 - Establecer las líneas base</h3></b>
        Se establecen las líneas base de los productos de trabajo identificados.<br><br>
Las prácticas específicas para establecer las líneas base se cubren por
esta meta específica. Las prácticas específicas bajo la meta específica
Seguir y controlar los cambios sirven para mantener las líneas base.
Las prácticas específicas de la meta específica Establecer la integridad,
documentan y auditan la integridad de las líneas base.

<br><br><br><b>SP1.1 - Identificar los elementos de configuración</b><br><br>
Identificar los elementos de configuración, los componentes, y los productos
de trabajo relacionados que serán puestos bajo gestión de configuración.]]>
    </string>
    <string name="gestion_configuracion_SP11subpracticas">
<![CDATA[
      <br><br><b>Subprácticas</b><br><br>
1. Seleccionar los elementos de configuración y los productos de trabajo
que los componen, basándose en criterios documentados.<br>
2. Asignar identificadores únicos a los elementos de configuración.<br>
3. Especificar las características importantes de cada elemento de
configuración.<br>
4. Especificar cuándo se pone bajo gestión de configuración cada elemento
de configuración.<br>
5. Identificar al propietario responsable de cada elemento de
configuración.<br>
6. Especificar las relaciones entre los elementos de configuración.
        ]]>
    </string>
    <string name="gestion_configuracion_SP12">
<![CDATA[ <br><br><b>SP 1.2 - Establecer un sistema de gestión de configuración</b><br><br>
Establecer y mantener un sistema de gestión de configuración y de gestión de
cambios para controlar los productos de trabajo. ]]>
    </string>
    <string name="gestion_configuracion_SP12subrpacticas">
<![CDATA[<br><br><b>Subprácticas</b><br><br>
1. Establecer un mecanismo para gestionar múltiples niveles de control.<br>
2. Proporcionar control de acceso para asegurar el acceso autorizado al
sistema de gestión de configuración.<br>
3. Almacenar y recuperar los elementos de configuración en un sistema
de gestión de configuración.<br>
4. Compartir y transferir los elementos de configuración entre los niveles
de control en el sistema de gestión de configuración.<br>
5. Almacenar y recuperar versiones archivadas de elementos de
configuración.<br>
6. Almacenar, actualizar y recuperar los registros de gestión de
configuración.<br>
7. Crear informes de gestión de configuración a partir del sistema de
gestión de configuración.<br>
8. Preservar los contenidos del sistema de gestión de configuración.<br>
9. Modificar la estructura de gestión de configuración según sea
necesario.<br>    ]]>
    </string>
    <string name="gestion_configuracion_SP13">
<![CDATA[<br><br><b>SP 1.3 Crear o liberar las líneas base</b><br><br>
Crear o liberar las líneas base para uso interno y para la entrega al cliente.]]>
    </string>
    <string name="gestion_configuracion_SP13subpracticas">
<![CDATA[ <br><br><b>Subprácticas</b><br><br>
1. Obtener la autorización del Comité de Control de Configuración
(CCB) antes de crear o liberar las líneas base de elementos de
configuración.<br>
2. Crear o liberar líneas base sólo de los elementos de configuración en
el sistema de gestión de configuración.<br>
3. Documentar el conjunto de elementos de configuración que están
contenidos en una línea base.<br>
4. Poner a disposición el conjunto actual de líneas base.<br>   ]]>
    </string>
    <string name="gestion_configuracion_SP21">
<![CDATA[<br><br><b><h3>SG 2 Seguir y controlar los cambios</h3></b><br>
        
       Se siguen y se controlan los productos de trabajo bajo gestión de configuración.<br><br><b>
       Las prácticas específicas de esta meta específica sirven para mantener
las líneas base después de que estén establecidas por las prácticas específicas
de la meta específica Establecer las líneas base.<br><br>
<br>SP 2.1 Seguir las peticiones de cambio</b><br><br>
Seguir las peticiones de cambio a los elementos de configuración.
 ]]>
    </string>
    <string name="gestion_configuracion_SP21subpracticas">
<![CDATA[
        <br><br><b>Subprácticas</b><br><br>
        1. Iniciar y registrar las peticiones de cambio en la base de datos de
peticiones de cambio.<br>
2. Analizar el impacto de los cambios y de las correcciones propuestas
en las peticiones de cambio.<br>
3. Clasificar y priorizar las peticiones de cambio.<br>
4. Revisar las peticiones de cambio a tratar en la siguiente línea base con
las partes interesadas relevantes y llegar a un acuerdo.<br>
5. Seguir el estado de las peticiones de cambio hasta su cierre.]]>
    </string>
    <string name="gestion_configuracion_SP22">
<![CDATA[
        <br><br><b>SP 2.2 Controlar los elementos de configuración</b><br><br>
        Controlar los cambios a los elementos de configuración.]]>
    </string>
    <string name="gestion_configuracion_SP22subpracticas">
<![CDATA[
        <br><br><b>Subprácticas</b><br><br>
1. Controlar los cambios a los elementos de configuración a lo largo de
la vida del producto o servicio.<br>
2. Obtener la autorización apropiada antes que los elementos de configuración
modificados sean introducidos en el sistema de gestión de
configuración.<br>
3. Realizar actividades de check-in y check-out de los elementos de
configuración en el sistema de gestión de configuración para la incorporación
de los cambios, de forma que se mantenga la exactitud y
la integridad de los elementos de configuración.<br>
4. Realizar revisiones para asegurar que los cambios no hayan causado
efectos no deseados en las líneas base (p. ej., asegurar que los cambios
no hayan comprometido la seguridad o la protección del sistema).<br>
5. Registrar los cambios a los elementos de configuración y las razones
de los cambios, según sea apropiado.<br>]]>
    </string>
    <string name="gestion_configuracion_SP31">
<![CDATA[
        <br><br><b><h3>SG 3 Establecer la integridad</h3></b><br>
        Se establece y mantiene la integridad de las líneas base.<br><br>
        
        La integridad de las líneas base, establecida por los procesos asociados
con la meta específica Establecer las líneas base, y mantenida por los
procesos asociados con la meta específica Seguir y controlar los cambios,
es tratada por las prácticas específicas de esta meta específica.
       
       <br><br><br><b>SP 3.1 Establecer los registros de gestión de configuración</b><br><br>
Establecer y mantener los registros que describen los elementos de configuración.
        ]]>
    </string>
    <string name="gestion_configuracion_SP31subpracticas">
<![CDATA[
        <br><br><b>Subprácticas</b><br><br>
        1. Registrar las acciones de gestión de configuración con suficiente detalle
para que se conozca el contenido y el estado de cada elemento de
configuración, y para que se puedan recuperar versiones anteriores.<br>
2. Asegurar que las partes interesadas relevantes tengan acceso y
conocimiento del estado de configuración de los elementos de
configuración.<br>
3. Especificar la última versión de las líneas base.<br>
4. Identificar la versión de los elementos de configuración que constituyen
una línea base particular.<br>
5. Describir las diferencias entre líneas base sucesivas.<br>
6. Modificar, si procede, el estado y la historia (es decir, cambios y otras
acciones) de cada elemento de configuración.<br>]]>
    </string>
    <string name="gestion_configuracion_SP32">
<![CDATA[<br><br><b>SP 3.2 Realizar auditorías de configuración</b><br><br>
Realizar auditorías de configuración para mantener la integridad de las líneas
base de configuración.]]>
    </string>
    <string name="button_eliminar">Eliminar</string>
    <string name="n_evaluacion">Nueva evaluación</string>
    <string name="new_organization_organization_name_hint">Nombre de la organización...</string>
    <string name="organization_notes_hint">Notas de la organización...</string>
    <string name="contact_name_hint">Nombre de la persona de contacto...</string>
    <string name="contact_position_hint">Cargo de la persona de contacto...</string>
    <string name="contact_email_hint">Correo de la persona de contacto...</string>
    <string name="contact_phone_hint">Teléfono de la persona de contacto...</string>
    <string name="new_evaluation_content_description">New evaluation icon</string>
</resources>