<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="left"
  android:baselineAligned="false"
  android:orientation="horizontal"
  android:paddingLeft="16dp"
  android:paddingRight="16dp">

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="200dp"
      android:layout_height="178dp"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opciones_organizaciones"
        android:textAppearance="?android:attr/textAppearanceLarge" />

      <Button
        android:id="@+id/buttonAnadirIcono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anadir_icono" />

      <Button
        android:id="@+id/buttonGuardarOrganizacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />

      <Button
        android:id="@+id/btn_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_eliminar" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opciones_evaluacion"
        android:textAppearance="?android:attr/textAppearanceLarge" />

      <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n_evaluacion" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="bottom"
      android:orientation="vertical">

      <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ayuda_cmmi"
        android:textAppearance="?android:attr/textAppearanceLarge" />

      <Button
        android:id="@+id/buttonAyudaCMMI_NO"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ayuda_cmmi" />
    </LinearLayout>
  </LinearLayout>

  <ScrollView
    android:layout_width="320dp"
    android:layout_height="fill_parent"
    android:fadeScrollbars="false"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/datos_organizacion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:text="@string/nombre_organizacion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

      <EditText
        android:id="@+id/SP11NotasNotasEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:textSize="18sp">


        <requestFocus />

      </EditText>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/notas"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

      <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:hint="Notas de la organización..."
        android:inputType="textCapSentences|textMultiLine"
        android:textSize="18sp">

      </EditText>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/persona_contacto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/nombre_contacto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

      <EditText
        android:id="@+id/SP11NotasDebilidadesEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:hint="Nombre..."
        android:inputType="textCapWords"
        android:textSize="18sp" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/cargo_contacto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

      <EditText
        android:id="@+id/SP11EjemploInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:hint="Cargo..."
        android:inputType="textCapSentences"
        android:textSize="18sp" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/correo_contacto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

      <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:hint="Correo..."
        android:inputType="textCapSentences"
        android:textSize="18sp" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/telefono_contacto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

      <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:hint="Teléfono..."
        android:inputType="number"
        android:textSize="18sp" />

    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Evaluaciones"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textSize="20sp" />

    <ListView
      android:id="@+id/listView1"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginTop="25dp">

    </ListView>

  </LinearLayout>

</LinearLayout>